added redis integration_addition
